# ootpisp_ubuntu

./: ShapeEditor.cpp
lab3/: CMakeLists.txt  ShapeEditor.cpp
lab4/core/: GeometryUtils.cpp  Point.h
lab4/shapes/: EllipseShape.cpp  EllipseShape.h  GroupShape.cpp  GroupShape.h  PolygonShape.cpp  PolygonShape.h
lab4/ui/: MainWindow.cpp  MainWindow.h
lab5/: CMakeLists.txt
lab5/core/: GeometryUtils.h
lab5/serialization/: EditorJson.cpp  EditorJson.h
lab5/shapes/: PolygonShape.h  Shape.cpp  Shape.h
lab5/ui/: MainWindow.cpp  MainWindow.h
